pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels:
    app: juice-shop
spec:
  containers:
  - name: juice-shop
    image: bkimminich/juice-shop
    ports:
    - containerPort: 3000
