svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: juice-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
