route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: svc
  namespace: argocd-app
spec:
  host: argo-test.apps.ocp-sno4.vsoft.local
  to:
    kind: Service
    name: svc
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
